# Futsal-ML-Analysis

./: Futsal_ML.ipynb  New_Futsal_ML.ipynb  New_Futsal_Player_ML.ipynb  final_clean_matches.csv  final_feature_engineered_matches.csv  players-futsal-men-scores.csv  series-futsal-men-matches.csv
Futsal_Match_Prediction/: main.py  pyproject.toml  requirement.txt  run_training.py  test_inference.py  test_pipeline.py
Futsal_Match_Prediction/api/routes/: predict.py
Futsal_Match_Prediction/components/: data_ingestion.py  data_transformation.py
Futsal_Match_Prediction/data/: matches_ml.csv  pipeline_state.json  players-futsal-men-scores.csv  series-futsal-men-matches.csv
Futsal_Match_Prediction/models/: best_model.pkl
Futsal_Match_Prediction/notebooks/: New_Futsal_Matches_ML.ipynb
Futsal_Match_Prediction/pipeline/: inference.py  inference_pipeline.py  training_pipeline.py
Futsal_Match_Prediction/scripts/: inference.py  model_trainer.py
Futsal_Match_Prediction/services/: data_pipeline.py  inference_pipeline.py
