[project]
name = "futsal-match-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "joblib>=1.5.3",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.47.0",
]
